# RAG_Diagnosis_Assistant_Renault

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-commands.sh  pyproject.toml  requirements.txt  streamlit_app.py
.streamlit/: config.toml
analytics/: chunk_quality_analyzer.py  dense_kg_visualizer.py  dense_sc_kg_visualizer.py  document_quality_analyzer.py  scr_extraction_analyzer.py  sparse_kg_visualizer.py
analytics/analytic_reports/: rapport_analyse_scr.md  scr_analysis_results.txt
config/: settings.yaml
config/prompts/: judge_evaluation_prompt.txt  old_prompts.txt  rag_with_kg_dense_prompt.txt  rag_with_kg_dense_s&c_prompt.txt  rag_with_kg_sparse_prompt.txt  standard_rag_prompt.txt  unified_query_prompt.txt  unified_query_prompt_concis.txt  unified_query_prompt_long.txt
core/cloud/: neo4j_cloud_manager.py
core/evaluation/: __init__.py  llm_judge_client.py  response_evaluator.py
core/query_processing/: __init__.py  enhanced_retrieval_engine.py  llm_client.py  response_parser.py  unified_query_processor.py
core/reranking_engine/: cross_encoder_reranker.py
core/response_generation/: rag_with_kg_dense_generator.py  rag_with_kg_dense_sc_generator.py  rag_with_kg_sparse_generator.py  standard_rag_generator.py
core/retrieval_engine/: hybrid_fusion.py  lexical_search.py  (+1 more)
tests/: test_cloud_simple.py  test_cloud_simple_sup.py  test_cross_encoder_reranker.py  test_dense_kg_querier.py  test_dense_s&c_kg_querier.py  test_equipment_matcher.py  test_hybrid_fusion.py  test_lexical_search.py  test_semantic_search.py  test_sparse_kg_querier.py
(+42 files in other folders)
